--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
     <!-- FOOTER -->
     <footer>
         <p>&copy; 2025 Buzzcool - Kelas B Angkatan 2023 | Jurusan Ilmu Perpustakaan</p>
+        <p>Designed By Fadel Rachman</p>
     </footer>
 
 
@@ -166,3 +167,4 @@
 
 </body>
 </html>
+
