--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <!-- FOOTER -->
     <footer>
         <p>&copy; 2025 Buzzcool - Kelas B Angkatan 2023 | Jurusan Ilmu Perpustakaan</p>
-        <p>Designed By Fadel Rachman</p>
+        <p>Designed by Fadel Rachman</p>
     </footer>
 
 
@@ -167,4 +167,5 @@
 
 </body>
 </html>
+
 
