--- a/member.html
+++ b/member.html
@@ -78,6 +78,7 @@
     <!-- FOOTER -->
     <footer>
         <p>&copy; 2025 Buzzcool - Kelas 5B Angkatan 2023 | Jurusan Ilmu Perpustakaan</p>
+        <p>Designed by Fadel Rachman</p>
     </footer>
 
     <!-- JAVASCRIPT -->
@@ -132,3 +133,4 @@
     </script>
 </body>
 </html>
+
