--- a/jadwal.html
+++ b/jadwal.html
@@ -67,6 +67,7 @@
     <!-- FOOTER -->
     <footer>
         <p>&copy; 2025 Buzzcool - Kelas 5B Angkatan 2023 | Jurusan Ilmu Perpustakaan</p>
+        <p>Designed by Fadel Rachman</p>
     </footer>
 
     <!-- JAVASCRIPT -->
@@ -122,3 +123,4 @@
 
 </body>
 </html>
+
