--- a/gallery.html
+++ b/gallery.html
@@ -87,7 +87,9 @@
   <!-- FOOTER -->
   <footer>
     <p>&copy; 2025 Buzzcool - Kelas 5B Angkatan 2023 | Jurusan Ilmu Perpustakaan</p>
+    <p>Designed by Fadel Rachman</p>
   </footer>
 
 </body>
 </html>
+
