--- a/menfess.html
+++ b/menfess.html
@@ -51,6 +51,7 @@
   <!-- FOOTER -->
   <footer>
     <p>&copy; 2025 Buzzcool - Kelas 5B Angkatan 2023 | Jurusan Ilmu Perpustakaan</p>
+    <p>Designed by Fadel Rachman</p>
   </footer>
 
   <!-- JAVASCRIPT -->
@@ -65,3 +66,4 @@
 
 </body>
 </html>
+
